--- a/app/src/main/res/layout/activity_disneyplaylist.xml
+++ b/app/src/main/res/layout/activity_disneyplaylist.xml
@@ -1,51 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#43F3F7F8"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="#00F49A7D"
     android:orientation="vertical"
     android:theme="@style/Theme.AppCompat"
     tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="590dp"
+        android:layout_width="330dp"
+        android:layout_height="453dp"
         android:background="@drawable/moana_promo"
         android:contentDescription="@string/todo" />
 
     <LinearLayout
-        android:layout_width="330dp"
-        android:layout_height="wrap_content"
+        android:layout_width="789dp"
+        android:layout_height="152dp"
         android:layout_margin="20dp"
-        android:background="#00F6FAFA"
-        android:baselineAligned="false"
-        android:orientation="horizontal"
-        android:padding="15dp">
-
-        <Button
-            android:id="@+id/pause"
-            style="@style/Widget.AppCompat.Button.Borderless.Colored"
-            android:layout_width="62dp"
-            android:layout_height="wrap_content"
-            android:background="@android:drawable/ic_media_pause"
-            android:onClick="musicpause" />
+        android:background="#00FAFBFB"
+        android:padding="10dp">
 
         <Button
             android:id="@+id/start"
             style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="63dp"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="85dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="-95dp"
+            android:layout_marginRight="152dp"
             android:background="@android:drawable/ic_media_play"
             android:onClick="musicplay" />
 
         <Button
+            android:id="@+id/pause"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="100dp"
+            android:layout_height="85dp"
+            android:layout_marginStart="90dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginTop="4dp"
+            android:background="@android:drawable/ic_media_pause"
+            android:onClick="musicpause" />
+
+
+        <Button
             android:id="@+id/stop"
             style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="69dp"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="85dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="268dp"
+            android:layout_marginRight="268dp"
             android:background="@android:drawable/ic_menu_close_clear_cancel"
             android:onClick="musicstop" />
     </LinearLayout>
