--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -4,58 +4,76 @@
 
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:largeScreens="true"
+    android:normalScreens="true"
+    android:smallScreens="true"
+    android:xlargeScreens="true" >
 
     <TextView
         android:id="@+id/txtWelcome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="29dp"
+        android:layout_width="362dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="64dp"
         android:text="@string/txtWelcome"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#00BCD4"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="416dp"
-        android:contentDescription="@string/kidsMusic"
-        app:layout_constraintEnd_toEndOf="@id/btnPreschool"
+        android:layout_width="wrap_content"
+        android:layout_height="211dp"
+        android:layout_marginTop="4dp"
+        android:contentDescription="@string/txtWelcome"
+        android:scaleType="fitCenter"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toEndOf="@id/guideline2"
+        app:layout_constraintStart_toStartOf="@id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/txtWelcome"
         app:srcCompat="@drawable/kidsmusic" />
 
     <Button
         android:id="@+id/btnPreschool"
-        android:layout_width="380dp"
-        android:layout_height="67dp"
+        android:layout_width="180dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="12dp"
         android:text="@string/goPreschool"
-        app:layout_constraintEnd_toEndOf="@id/btnNaptime"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <Button
         android:id="@+id/btnDisney"
-        android:layout_width="379dp"
-        android:layout_height="59dp"
+        android:layout_width="180dp"
+        android:layout_height="49dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:text="@string/goPopDisney"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.468"
+        app:layout_constraintHorizontal_bias="0.548"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnNaptime" />
 
     <Button
         android:id="@+id/btnNaptime"
-        android:layout_width="380dp"
-        android:layout_height="63dp"
+        android:layout_width="180dp"
+        android:layout_height="49dp"
         android:layout_marginTop="4dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:text="@string/goNaptime"
-        app:layout_constraintEnd_toEndOf="@+id/btnDisney"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.548"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnPreschool" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -63,7 +81,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="20dp" />
+        app:layout_constraintGuide_percent="0.02" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.96" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
